# competitor-price-monitor

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.claude/skills/: README.md
.github/workflows/: daily-scrape.yml  pages.yml
data/: prices.csv
landing/: index.html
research/: pain-hunt-2026-07.md  pain-hunt-archive-2026-07.md  prompt-pain-2-ai-act.md
src/: __init__.py  cli.py  notifier.py  scraper.py  storage.py
tests/: test_storage.py
