[project]
name = "competitor-price-monitor"
version = "0.1.0"
description = "Headless-browser price tracker for competitor e-commerce pages with CSV history and Slack alerts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Zdeněk Bradáč", email = "zdenek.brdy@email.cz" }]
license = { text = "MIT" }

dependencies = [
  "playwright>=1.44",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
price-monitor = "src.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
